--- a/conan/conanfile.py.in
+++ b/conan/conanfile.py.in
@@ -50,3 +50,7 @@ class R4Conan(ConanFile):
 		pass
 		# TODO: uncomment in case r4 starts providing binary lib
 		#self.cpp_info.libs = [self.name]
+
+	# change package id only when minor or major version changes, i.e. when ABI breaks
+	def package_id(self):
+		self.info.requires.minor_mode()
