--- a/tests/unit/makefile
+++ b/tests/unit/makefile
@@ -3,13 +3,13 @@ include prorab-test.mk
 
 $(eval $(call prorab-try-simple-include, $(CONANBUILDINFO_DIR)conanbuildinfo.mak))
 
-this_name := tests
+this_name := r4_unit_tests
 
-this_srcs := $(call prorab-src-dir, .)
+this_srcs += $(call prorab-src-dir, src)
 
 $(eval $(call prorab-config, ../../config))
 
-this_ldlibs += -lm -lutki
+this_ldlibs += -ltst -lutki -lm $(addprefix -l,$(CONAN_LIBS))
 
 this_cxxflags += $(addprefix -I,$(CONAN_INCLUDE_DIRS))
 this_ldflags += $(addprefix -L,$(CONAN_LIB_DIRS))
@@ -18,7 +18,7 @@ this_no_install := true
 
 $(eval $(prorab-build-app))
 
-this_test_cmd := $(prorab_this_name)
+this_test_cmd := $(prorab_this_name) --junit-out=junit.xml
 this_test_deps := $(prorab_this_name)
 this_test_ld_path := ../../src/out/$(c) $(CONAN_LIB_DIRS)
 $(eval $(prorab-test))
