--- a/tests/unit/makefile
+++ b/tests/unit/makefile
@@ -18,7 +18,7 @@ this_no_install := true
 
 $(eval $(prorab-build-app))
 
-this_test_cmd := $(prorab_this_name) --junit-out=junit.xml --jobs=$(prorab_nproc)
+this_test_cmd := $(prorab_this_name) --junit-out=out/$(c)/junit.xml --jobs=$(prorab_nproc)
 this_test_deps := $(prorab_this_name)
 this_test_ld_path := ../../src/out/$(c) $(CONAN_LIB_DIRS)
 $(eval $(prorab-test))
