--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ env:
 jobs:
 ##### coverage #####
   coverage:
+    permissions:
+      pull-requests: write
     runs-on: ubuntu-latest
     container: debian:bullseye
     name: coverage - measure
